src/test/ui/lifetime-errors/ex3-both-anon-regions-2.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-2.rs:12:9
   |
11 | fn foo((v, w): (&u8, &u8), x: &u8) {
   |                 ---           --- these two types are declared with different lifetimes...
12 |     v = x; //~ ERROR lifetime mismatch
   |         ^ ...but data from `x` flows here

error: aborting due to previous error

